[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scenes/Menus/Main Menu/main_menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Themes/main.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/World/world.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Textures/UI/logo2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Themes/button_tan_normal.tres" type="StyleBox" id=5]
[ext_resource path="res://Assets/Themes/button_tan_pressed.tres" type="StyleBox" id=6]
[ext_resource path="res://Assets/Themes/button_tan_hover.tres" type="StyleBox" id=7]
[ext_resource path="res://Assets/Themes/accid___.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Scenes/Singletons/Tooltips/tooltip_node.gd" type="Script" id=9]
[ext_resource path="res://Assets/Textures/UI/lamdev.png" type="Texture" id=10]
[ext_resource path="res://Assets/Themes/panel_med.tres" type="StyleBox" id=11]
[ext_resource path="res://Assets/Textures/UI/knot_sep2.png" type="Texture" id=12]
[ext_resource path="res://Assets/Themes/panel_green.tres" type="StyleBox" id=13]
[ext_resource path="res://Scenes/Menus/Main Menu/ui_generic_button.gd" type="Script" id=14]
[ext_resource path="res://Assets/Textures/UI/loading_dial.png" type="Texture" id=15]
[ext_resource path="res://Scenes/Menus/Main Menu/save_select.gd" type="Script" id=16]
[ext_resource path="res://Assets/Textures/UI/player_options5.png" type="Texture" id=18]

[sub_resource type="Gradient" id=4]
interpolation_mode = 2
offsets = PoolRealArray( 0, 0.597668 )
colors = PoolColorArray( 1, 0.933333, 0.835294, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture2D" id=3]
gradient = SubResource( 4 )
fill_to = Vector2( 0, 1 )

[sub_resource type="DynamicFont" id=1]
size = 34
font_data = ExtResource( 8 )

[node name="main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="world" parent="." instance=ExtResource( 3 )]
backdrop = true

[node name="TextureRect2" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.164706 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 3 )
expand = true
stretch_mode = 1
flip_v = true

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.25
anchor_top = 0.1
anchor_right = 0.75
anchor_bottom = 0.441
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.4
anchor_top = 0.62
anchor_right = 0.6
anchor_bottom = 0.824
custom_constants/separation = 8
alignment = 2

[node name="play" type="Button" parent="VBoxContainer"]
margin_right = 384.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 1, 0.933333, 0.835294, 1 )
custom_colors/font_color_focus = Color( 0.415686, 0.266667, 0.12549, 1 )
custom_colors/font_color = Color( 0.415686, 0.266667, 0.12549, 1 )
custom_colors/font_color_hover = Color( 1, 0.933333, 0.835294, 1 )
custom_colors/font_color_pressed = Color( 1, 0.933333, 0.835294, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
text = "Play"
script = ExtResource( 14 )

[node name="TooltipNode" type="Control" parent="VBoxContainer/play"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
header = "[color=#6a4420]Play"
body = "Join someone else's server or create your own!"

[node name="reset" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 104.0
margin_right = 384.0
margin_bottom = 148.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 1, 0.933333, 0.835294, 1 )
custom_colors/font_color_focus = Color( 0.415686, 0.266667, 0.12549, 1 )
custom_colors/font_color = Color( 0.415686, 0.266667, 0.12549, 1 )
custom_colors/font_color_hover = Color( 1, 0.933333, 0.835294, 1 )
custom_colors/font_color_pressed = Color( 1, 0.933333, 0.835294, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
text = "Reset Save Data"
script = ExtResource( 14 )

[node name="settings" type="Button" parent="VBoxContainer"]
margin_top = 76.0
margin_right = 384.0
margin_bottom = 144.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 1, 0.933333, 0.835294, 1 )
custom_colors/font_color_focus = Color( 0.415686, 0.266667, 0.12549, 1 )
custom_colors/font_color = Color( 0.415686, 0.266667, 0.12549, 1 )
custom_colors/font_color_hover = Color( 1, 0.933333, 0.835294, 1 )
custom_colors/font_color_pressed = Color( 1, 0.933333, 0.835294, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
text = "Settings"
script = ExtResource( 14 )

[node name="TooltipNode" type="Control" parent="VBoxContainer/settings"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
header = "[color=#6a4420]Settings"
body = "Tweak stuff to your liking!"

[node name="quit" type="Button" parent="VBoxContainer"]
margin_top = 152.0
margin_right = 384.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 1, 0.933333, 0.835294, 1 )
custom_colors/font_color_focus = Color( 0.415686, 0.266667, 0.12549, 1 )
custom_colors/font_color = Color( 0.415686, 0.266667, 0.12549, 1 )
custom_colors/font_color_hover = Color( 1, 0.933333, 0.835294, 1 )
custom_colors/font_color_pressed = Color( 1, 0.933333, 0.835294, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
text = "Quit"
script = ExtResource( 14 )

[node name="TooltipNode" type="Control" parent="VBoxContainer/quit"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
header = "[color=#6a4420]Quit"
body = "it's fine. yeah, no- you can leave. i dont care. go on then. go."

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.753646
anchor_top = 0.946296
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -16.0
margin_bottom = -16.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 252.0
margin_top = 4.0
margin_right = 410.0
margin_bottom = 38.0
custom_colors/font_color = Color( 1, 0.933333, 0.835294, 1 )
text = "lamedeveloper"
align = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
margin_left = 414.0
margin_right = 456.0
margin_bottom = 42.0
rect_min_size = Vector2( 42, 42 )
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="lobby_browser" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="lobby_browser"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0627451, 0.109804, 0.192157, 0.431373 )

[node name="Panel" type="Panel" parent="lobby_browser"]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8

[node name="Panel" type="Panel" parent="lobby_browser/Panel"]
anchor_top = 0.06
anchor_right = 1.0
anchor_bottom = 0.28
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_styles/panel = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button" type="Button" parent="lobby_browser/Panel/Panel"]
anchor_left = 0.86
anchor_right = 0.99
anchor_bottom = 1.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0
size_flags_horizontal = 3
text = "Start Game"
script = ExtResource( 14 )

[node name="VBoxContainer" type="VBoxContainer" parent="lobby_browser/Panel/Panel"]
anchor_right = 0.86
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0
alignment = 1

[node name="topbar" type="HBoxContainer" parent="lobby_browser/Panel/Panel/VBoxContainer"]
margin_right = 939.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 12

[node name="Label" type="Label" parent="lobby_browser/Panel/Panel/VBoxContainer/topbar"]
margin_top = 3.0
margin_right = 226.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
text = "Lobby Display Name: "
valign = 1

[node name="TooltipNode" type="Control" parent="lobby_browser/Panel/Panel/VBoxContainer/topbar/Label"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
header = "Lobby Display Name"
body = "Set the lobby name that all players can visually see!"

[node name="lobbyname" type="LineEdit" parent="lobby_browser/Panel/Panel/VBoxContainer/topbar"]
unique_name_in_owner = true
margin_left = 238.0
margin_right = 939.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 12.5
max_length = 48
placeholder_text = "[player lobby name]"
script = ExtResource( 14 )

[node name="botbar" type="HBoxContainer" parent="lobby_browser/Panel/Panel/VBoxContainer"]
margin_top = 45.0
margin_right = 939.0
margin_bottom = 86.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 12

[node name="maxplayerslabel" type="Label" parent="lobby_browser/Panel/Panel/VBoxContainer/botbar"]
margin_top = 3.0
margin_right = 228.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.94
text = "Max Players: "
valign = 1

[node name="TooltipNode" type="Control" parent="lobby_browser/Panel/Panel/VBoxContainer/botbar/maxplayerslabel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
header = "Max Players"
body = "Maximum player count for your lobby."

[node name="max_players" type="OptionButton" parent="lobby_browser/Panel/Panel/VBoxContainer/botbar"]
unique_name_in_owner = true
margin_left = 240.0
margin_right = 434.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.5
script = ExtResource( 14 )

[node name="18label" type="Label" parent="lobby_browser/Panel/Panel/VBoxContainer/botbar"]
margin_left = 446.0
margin_top = 3.0
margin_right = 491.0
margin_bottom = 37.0
rect_pivot_offset = Vector2( -785, 145.12 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.58
text = "18+:"
valign = 1

[node name="TooltipNode" type="Control" parent="lobby_browser/Panel/Panel/VBoxContainer/botbar/18label"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
header = "Age Limit"
body = "Marks the lobby with an [18+] tag, and makes players accept an agreement when they join. This changes nothing gameplay-wise."

[node name="18_tag" type="Button" parent="lobby_browser/Panel/Panel/VBoxContainer/botbar"]
unique_name_in_owner = true
margin_left = 503.0
margin_right = 601.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.25
text = "DISABLED"
icon_align = 1
script = ExtResource( 14 )

[node name="type" type="Label" parent="lobby_browser/Panel/Panel/VBoxContainer/botbar"]
margin_left = 613.0
margin_top = 3.0
margin_right = 703.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.16
text = "Type: "
valign = 1

[node name="TooltipNode" type="Control" parent="lobby_browser/Panel/Panel/VBoxContainer/botbar/type"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
header = "Lobby Type"
body = "Choose how the lobby operates.
[color=#6a4420]PUBLIC[/color]: Public and visible in the Game Browser for all to join.
[color=#6a4420]CODE-ONLY[/color]: Public, but not visible in the Game Browser, while still allowing players to join via code and game invites.
[color=#6a4420]FRIENDS-ONLY[/color]: Codeless Lobby that is hidden and inaccessible to all players except Steam friends.
[color=#6a4420]OFFLINE/SOLO[/color]: Start a game alone, with players unable to join you."

[node name="serv_options" type="OptionButton" parent="lobby_browser/Panel/Panel/VBoxContainer/botbar"]
unique_name_in_owner = true
margin_left = 715.0
margin_right = 939.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.88
script = ExtResource( 14 )

[node name="Label" type="Label" parent="lobby_browser/Panel"]
anchor_left = 0.014
anchor_top = 0.0234568
anchor_right = 1.0
anchor_bottom = 0.0759259
text = "Create Game"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="sep" type="TextureRect" parent="lobby_browser/Panel"]
anchor_top = 0.0277778
anchor_right = 1.0
anchor_bottom = 0.0771605
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
texture = ExtResource( 12 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label2" type="Label" parent="lobby_browser/Panel"]
anchor_left = 0.014
anchor_top = 0.273457
anchor_right = 1.0
anchor_bottom = 0.325926
text = "Join Game"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="sep2" type="TextureRect" parent="lobby_browser/Panel"]
anchor_top = 0.277778
anchor_right = 1.0
anchor_bottom = 0.327161
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
texture = ExtResource( 12 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button" type="Button" parent="lobby_browser/Panel"]
anchor_left = 0.979167
anchor_top = -0.0262346
anchor_right = 1.01417
anchor_bottom = 0.0257654
margin_right = 1.68005
margin_bottom = 8.304
text = "X"
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button2" type="Button" parent="lobby_browser/Panel"]
anchor_left = 0.819444
anchor_top = 0.439815
anchor_right = 0.982049
anchor_bottom = 0.518049
margin_right = 1.68005
text = "REFRESH"
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="filter" type="Panel" parent="lobby_browser/Panel"]
anchor_top = 0.418025
anchor_right = 0.82
anchor_bottom = 0.543
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_styles/panel = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="lobby_browser/Panel/filter"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 8.0
margin_right = -12.0
margin_bottom = -8.0
custom_constants/separation = 16
alignment = 2

[node name="Label" type="Label" parent="lobby_browser/Panel/filter/HBoxContainer"]
margin_right = 258.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
text = "Search Filters"
valign = 1

[node name="TooltipNode" type="Control" parent="lobby_browser/Panel/filter/HBoxContainer/Label"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
header = "Search Filters"
body = "Customize the server's you can quickly find. Maximum servers shown is 1000."

[node name="versionmatch" type="CheckBox" parent="lobby_browser/Panel/filter/HBoxContainer"]
unique_name_in_owner = true
margin_left = 274.0
margin_right = 452.0
margin_bottom = 34.0
text = "HIDE OUTDATED "

[node name="agematch" type="CheckBox" parent="lobby_browser/Panel/filter/HBoxContainer"]
unique_name_in_owner = true
margin_left = 468.0
margin_right = 584.0
margin_bottom = 34.0
text = "HIDE 18+ "

[node name="fullmatch" type="CheckBox" parent="lobby_browser/Panel/filter/HBoxContainer"]
unique_name_in_owner = true
margin_left = 600.0
margin_right = 725.0
margin_bottom = 34.0
text = "HIDE FULL "

[node name="hidenames" type="CheckBox" parent="lobby_browser/Panel/filter/HBoxContainer"]
unique_name_in_owner = true
margin_left = 741.0
margin_right = 888.0
margin_bottom = 34.0
text = "HIDE NAMES "

[node name="Panel2" type="Panel" parent="lobby_browser/Panel"]
anchor_top = 0.511
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_styles/panel = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ScrollContainer" type="ScrollContainer" parent="lobby_browser/Panel/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="lobby_browser/Panel/Panel2/ScrollContainer"]
margin_right = 1088.0
margin_bottom = 252.872
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="TextureRect" type="CenterContainer" parent="lobby_browser/Panel/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Control" type="Control" parent="lobby_browser/Panel/Panel2/TextureRect"]
margin_left = 560.0
margin_top = 142.0
margin_right = 560.0
margin_bottom = 142.0
mouse_filter = 2

[node name="dial" type="Sprite" parent="lobby_browser/Panel/Panel2/TextureRect/Control"]
visible = false
texture = ExtResource( 15 )

[node name="Panel3" type="Panel" parent="lobby_browser/Panel"]
anchor_top = 0.311543
anchor_right = 1.0
anchor_bottom = 0.451544
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_styles/panel = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="lobby_browser/Panel/Panel3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 10.0
margin_right = -16.0
margin_bottom = -10.0
custom_constants/separation = 12

[node name="Label" type="Label" parent="lobby_browser/Panel/Panel3/HBoxContainer"]
margin_top = 2.0
margin_right = 608.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
text = "Join Game from Code"
valign = 1

[node name="serv_options" type="LineEdit" parent="lobby_browser/Panel/Panel3/HBoxContainer"]
margin_left = 620.0
margin_right = 848.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
custom_colors/cursor_color = Color( 1, 0.933333, 0.835294, 1 )
custom_colors/font_color = Color( 1, 0.933333, 0.835294, 1 )
custom_styles/focus = ExtResource( 13 )
custom_styles/normal = ExtResource( 13 )
align = 1
max_length = 6
placeholder_text = "Code Here  "

[node name="Button" type="Button" parent="lobby_browser/Panel/Panel3/HBoxContainer"]
margin_left = 860.0
margin_right = 1088.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
text = "Join Lobby"
script = ExtResource( 14 )

[node name="Timer" type="Timer" parent="lobby_browser"]
autostart = true

[node name="save_select_button" type="Button" parent="."]
anchor_left = 0.95
anchor_top = 0.0222222
anchor_right = 0.989
anchor_bottom = 0.0882222
margin_right = -2.88
margin_bottom = 0.720001
icon = ExtResource( 18 )
icon_align = 1
expand_icon = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TooltipNode" type="Control" parent="save_select_button"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
header = "Change Save"
body = "Change & manage your loaded save files."

[node name="save_select" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 16 )

[node name="ColorRect" type="ColorRect" parent="save_select"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0627451, 0.109804, 0.192157, 0.431373 )

[node name="Panel" type="Panel" parent="save_select"]
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.7
anchor_bottom = 0.7

[node name="VBoxContainer" type="VBoxContainer" parent="save_select/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 52.0
margin_right = -16.0
margin_bottom = -16.0
custom_constants/separation = 12

[node name="Label" type="Label" parent="save_select/Panel"]
anchor_top = 0.0185185
anchor_right = 1.0
anchor_bottom = 0.0185185
margin_bottom = 34.0
text = "Choose a Save Profile"
align = 1
valign = 2

[node name="close" type="Button" parent="save_select"]
anchor_left = 0.689062
anchor_top = 0.287037
anchor_right = 0.708917
anchor_bottom = 0.319926
margin_right = 3.88
margin_bottom = 6.47995
text = "x"
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="VBoxContainer/play" to="." method="_open_browser"]
[connection signal="pressed" from="VBoxContainer/reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="VBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="lobby_browser/Panel/Panel/Button" to="." method="_start_lobby"]
[connection signal="pressed" from="lobby_browser/Panel/Panel/VBoxContainer/botbar/18_tag" to="." method="_on_18_tag_pressed"]
[connection signal="pressed" from="lobby_browser/Panel/Button" to="." method="_close_browser"]
[connection signal="pressed" from="lobby_browser/Panel/Button2" to="." method="_refresh_lobbies"]
[connection signal="pressed" from="lobby_browser/Panel/Panel3/HBoxContainer/Button" to="." method="_join_from_code"]
[connection signal="timeout" from="lobby_browser/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="save_select_button" to="save_select" method="_on_save_select_button_pressed"]
[connection signal="pressed" from="save_select/close" to="save_select" method="_on_close_pressed"]
